# gazebo_plugins

Dominoes/: CMakeLists.txt  DominoesPlugin.cc  DominoesPlugin.hh  dominoes.world
FloatingModelNames/: CMakeLists.txt  FloatingModelNames.cc  FloatingModelNames.hh  README.md  shapes.world
KeyToResetModel/: CMakeLists.txt  README.md  example.world
SetStaticPose/: CMakeLists.txt  README.md  SetStaticPose.cc  SetStaticPose.hh  shapes.world
SkyPublisher/: CMakeLists.txt  README  sky.world  skypublisher.cc
